修改文档或配置

--- a/docs/v1/docs/features/prompt.mdx
+++ b/docs/v1/docs/features/prompt.mdx
@@ -41,7 +41,7 @@ import { normalizeImagePath } from 'rspress/runtime';
 
 您可以通过以下方式管理和使用提示词：
 
-* **浏览提示词**：在![提示词中心](https://chat.i-lingro.com/#/global-settings/prompts)查看所有现有提示词，并新建、编辑、克隆和删除提示词
+* **浏览提示词**：在 [提示词中心](https://chat.i-lingro.com/#/global-settings/prompts) 查看所有现有提示词，并新建、编辑、克隆和删除提示词
 * **创建新提示词**：点击"**新建提示词**"按钮创建个性化提示词
 * **编辑提示词**：修改提示词名称和并编辑提示词的内容
 * **克隆提示词**：复制现有提示词，基于任务需求进行微调
