修改文档或配置

--- a/docs/v1/docs/features/prompt.mdx
+++ b/docs/v1/docs/features/prompt.mdx
@@ -17,9 +17,9 @@ import { normalizeImagePath } from 'rspress/runtime';
 * **团队级灵活定制**：团队可灵活定制Prompt，在遵守公司企业与团队的规则下，可以对团队的工作框架和工作流按需定制，渐进调优并共享；
 * **版本控制与演进**：版本控制支持迭代演进，便于跟踪变化和应对更新。
 
-这提升了AI工作的规范性、协作性和创新性，同时强化合规与效率。我们以保险行业为例，展示Prompt管理功能如何助力企业和团队。
+这提升了AI工作的规范性、协作性和创新性，同时强化合规与效率。
 
-保险行业流程一般包括投保申请、核保、账单生成、保费收取、佣金发放、理赔和续保等，必须严格遵守《保险法》、监管法规（如银保监会要求）、公司风险控制制度，并以保护客户隐私为核心。构建Prompt管理功能时，可以从以下几个方面考虑：
+我们以保险行业为例，展示Prompt管理功能如何助力企业和团队。保险行业流程一般包括投保申请、核保、账单生成、保费收取、佣金发放、理赔和续保等，必须严格遵守《保险法》、监管法规（如银保监会要求）、公司风险控制制度，并以保护客户隐私为核心。构建Prompt管理功能时，可以从以下几个方面考虑：
 
 1. **公司级Prompt库**：创建一个公司级的Prompt库，包含所有符合监管要求和公司政策的标准化Prompt。所有团队复用这些Prompt，减少重复工作，提升效率。例如：
 
