--- a/docs/v1/docs/features/knowledge-base.mdx
+++ b/docs/v1/docs/features/knowledge-base.mdx
@@ -1,3 +1,19 @@
+import { Helmet } from '@rspress/core/runtime';
+
+<Helmet>
+  <title>知识库管理系统 - AI知识库搭建 | 企业知识库解决方案 | 灵格若</title>
+  <meta name="description" content="灵格若知识库管理系统，支持向量检索、多源数据整合、RAG技术。提供企业知识库、个人知识库搭建方案，智能检索、版本控制、团队协作。适合企业内部知识库建设和AI知识库应用。" />
+  <meta name="keywords" content="知识库,知识库系统,知识库管理系统,企业知识库,AI知识库,知识库管理,知识库软件,知识库建设,智能知识库,知识库搭建,RAG,向量数据库,知识库管理工具,企业知识库系统,知识库管理平台,大模型知识库,开源知识库" />
+  <meta property="og:title" content="知识库管理系统 - AI知识库搭建 | 企业知识库解决方案" />
+  <meta property="og:description" content="专业的AI知识库管理系统，支持向量检索、多源数据整合。帮助企业快速构建智能知识库，提升AI回答准确性。" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://docs.i-lingro.com/lingro-doc/docs/features/knowledge-base.html" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="知识库管理系统 - AI知识库搭建 | 企业知识库解决方案" />
+  <meta name="twitter:description" content="专业的AI知识库管理系统，支持向量检索、多源数据整合。" />
+  <link rel="canonical" href="https://docs.i-lingro.com/lingro-doc/docs/features/knowledge-base.html" />
+</Helmet>
+
 # 知识库
 
 知识库是提升AI应用效能的关键技术，它通过将用户问题与预先存储的专业知识相结合，使AI回答更加准确、专业、可靠。无论是企业内部文档、专业领域资料，还是业务规则，都可以通过RAG技术转化为AI可理解的知识，让AI回答言之有物，减少"幻觉"问题，提高回复质量。真正实现"用自己的数据，回答自己的问题"。
@@ -10,7 +26,7 @@
 
 ### 检索器
 
-#### 1.本地向量检索器
+#### 1. 本地向量检索器
 
 **特点**：
 - 简单部署，零额外依赖
@@ -93,14 +109,14 @@
 3. 填写知识库名称、描述等基本信息
 4. 选择数据同步方式：
 
-    a. **网页上传**
+    **a. 网页上传**
 
    - 您可以直接在页面上传普通的文本文档、PDF、表格等文件
    - 也可以输入网址，系统会自动爬取网页内容
    - 还可以上传音视频文件，系统会自动进行转录
    - 上传完成后，可为文件添加元数据，帮助AI更精准找到内容
 
-    b. **存储服务直连**
+    **b. 存储服务直连**
 
     - 配置连接信息（如SFTP地址、阿里云OSS等）
     - 指定远程存储服务的拉取目录
@@ -153,3 +169,13 @@
 
 通过我们的知识库功能，您可以让AI真正理解您的业务和专业领域，提供比通用AI更精准、更专业、更符合您业务场景的回答，成为您工作中强大的智能助手。
 
+---
+
+# 立即体验
+
+想让AI基于您的专业资料回答问题？上传文档到灵格若知识库，打造专属智能问答助手。
+
+**支持文档类型：** Word、PDF、Markdown、TXT等  
+**AI助手能力：** 知识检索、文档问答、内容总结
+
+👉 [开始构建知识库](https://chat.i-lingro.com) - AI智能助手免费版
