--- a/docs/v1/docs/features/prompt.mdx
+++ b/docs/v1/docs/features/prompt.mdx
@@ -1,4 +1,18 @@
-import { normalizeImagePath } from 'rspress/runtime';
+import { normalizeImagePath, Helmet } from 'rspress/runtime';
+
+<Helmet>
+  <title>AI提示词管理 - Prompt工程 | AI指令大全 | 灵格若</title>
+  <meta name="description" content="灵格若AI提示词管理系统，提供专业的Prompt模板库和AI指令大全。支持提示词工程、AI写作指令、变量替换、快捷调用。提升AI对话质量，优化AI输出效果。" />
+  <meta name="keywords" content="AI提示词,Prompt,提示词管理,AI指令,AI写作指令,提示词工程,AI提示词工程师,提示词模板,AI指令大全,Prompt模板,AI写作助手,提示词优化,智能提示词" />
+  <meta property="og:title" content="AI提示词管理 - Prompt工程 | AI指令大全" />
+  <meta property="og:description" content="专业的AI提示词管理工具，提供丰富的Prompt模板库，支持变量替换和快捷调用，提升AI使用效率。" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://docs.i-lingro.com/lingro-doc/docs/features/prompt.html" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="AI提示词管理 - Prompt工程 | AI指令大全" />
+  <meta name="twitter:description" content="专业的AI提示词管理工具，提供丰富的Prompt模板库。" />
+  <link rel="canonical" href="https://docs.i-lingro.com/lingro-doc/docs/features/prompt.html" />
+</Helmet>
 
 # 提示词管理
 ## 什么是提示词（Prompt）？
@@ -13,9 +27,9 @@ import { normalizeImagePath } from 'rspress/runtime';
 
 合理的Prompt管理功能具有以下的优势：
 
-* **公司级知识复用**：让您高效复用公司知识，确保统一最佳实践；
-* **团队级灵活定制**：团队可灵活定制Prompt，在遵守公司企业与团队的规则下，可以对团队的工作框架和工作流按需定制，渐进调优并共享；
-* **版本控制与演进**：版本控制支持迭代演进，便于跟踪变化和应对更新。
+* **公司级知识复用**：让您高效复用公司知识，确保统一最佳实践
+* **团队级灵活定制**：团队可灵活定制Prompt，在遵守公司企业与团队的规则下，可以对团队的工作框架和工作流按需定制，渐进调优并共享
+* **版本控制与演进**：版本控制支持迭代演进，便于跟踪变化和应对更新
 
 这提升了AI工作的规范性、协作性和创新性，同时强化合规与效率。
 
@@ -112,3 +126,16 @@ import { normalizeImagePath } from 'rspress/runtime';
 * 团队评审与共享：沉淀最佳实践为团队模板，个人在此基础上细化。
 * 多模型适配：同一意图，基于不同模型的风格与上下文长度，微调措辞与结构。
 * 结合知识与工具：对需要事实支撑的任务，优先接入知识库检索/工具，再要求生成。
+
+---
+
+# 立即体验
+
+掌握了提示词技巧？立即在灵格若AI助手中实践，创建您的Prompt模板库，让每次对话都精准高效。
+
+**灵格若Prompt管理功能：**
+- 📝 创建和保存提示词模板
+- 🔄 一键应用到对话中
+- 👥 团队共享优质Prompt
+
+👉 [免费使用AI助手](https://chat.i-lingro.com) - 在线创建您的Prompt库
