--- a/docs/v1/docs/features/workspace-mode.mdx
+++ b/docs/v1/docs/features/workspace-mode.mdx
@@ -1,3 +1,19 @@
+import { Helmet } from '@rspress/core/runtime';
+
+<Helmet>
+  <title>AI工作区与会话管理 - AI智能体 | AI工作流搭建 | 灵格若</title>
+  <meta name="description" content="灵格若AI工作区和会话管理系统，支持AI智能体搭建、AI工作流配置。提供多场景工作区、智能会话管理、团队协作功能。提升AI助手工作效率，优化AI工作流程。" />
+  <meta name="keywords" content="AI工作区,AI会话管理,AI智能体,AI Agent,AI工作流,工作流搭建,智能体搭建,AI助手,会话管理,团队协作,AI效率工具,AI工作流程,多场景AI" />
+  <meta property="og:title" content="AI工作区与会话管理 - AI智能体 | AI工作流搭建" />
+  <meta property="og:description" content="强大的AI工作区和会话管理系统，支持智能体搭建和工作流配置，提升团队协作效率。" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://docs.i-lingro.com/lingro-doc/docs/features/workspace-mode.html" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="AI工作区与会话管理 - AI智能体 | AI工作流搭建" />
+  <meta name="twitter:description" content="强大的AI工作区和会话管理系统，支持智能体搭建和工作流配置。" />
+  <link rel="canonical" href="https://docs.i-lingro.com/lingro-doc/docs/features/workspace-mode.html" />
+</Helmet>
+
 # 工作区与会话
 
 ## 工作区与会话：强大而直观的组织方式
@@ -28,14 +44,14 @@
 * 订阅模式 - 实时同步更新,确保团队使用统一的最新配置
 
 **全方位配置共享**:
-*  一键分享工作区及其所有会话配置
-*  自动同步提示词、知识库、MCP 服务等完整设置
-*  支持会话顺序自定义,保持团队工作流一致性
+* 一键分享工作区及其所有会话配置
+* 自动同步提示词、知识库、MCP 服务等完整设置
+* 支持会话顺序自定义,保持团队工作流一致性
 
 **灵活的访问控制**:
 * 自定义链接有效期
-* 设置分享人数限制``
-* 添加分享描述,帮助团队成员快速了解用途``
+* 设置分享人数限制
+* 添加分享描述,帮助团队成员快速了解用途
 
 **版本追踪与同步**:
 * 订阅模式支持一键同步至最新版本
@@ -48,7 +64,7 @@
 
 我们以保险行业为例，展示"工作区-会话"模式如何助力企业和团队：
 
-* 保险核保团队
+**保险核保团队**
 
 王核保师负责处理各类保险申请：
 1. 创建"健康险核保"工作区，关联健康险条款和医疗风险评估知识库
@@ -59,7 +75,7 @@
 
 所有会话共享基础核保规则，但各自专注于不同风险评级的客户群体，确保核保决策既高效又合规。
 
-* 理赔服务部门
+**理赔服务部门**
 
 李理赔专员处理多种保险理赔案例：
 1. 创建"理赔处理"工作区，关联理赔流程和欺诈风险识别知识库
@@ -168,6 +184,19 @@
 基于分享功能，您可以参考以下最佳实践，提升团队协作效率：
 
 * 分享者: 分享的时候，添加详细描述，说明更新日志
-* 接收者:  定期检查订阅内容是否有更新
-* 团队:  约定统一的命名和组织规范
-* 权限:  注意分享会授予接受者提示词、知识库、MCP 的读权限，所以请勿随意分享给非团队成员，以免造成信息泄露
+* 接收者: 定期检查订阅内容是否有更新
+* 团队: 约定统一的命名和组织规范
+* 权限: 注意分享会授予接受者提示词、知识库、MCP 的读权限，所以请勿随意分享给非团队成员，以免造成信息泄露
+
+---
+
+# 立即体验
+
+了解了工作区的强大能力？现在就创建您的第一个AI工作区，体验项目化管理、多会话协作的便捷。
+
+**灵格若AI助手 - 您的智能工作伙伴**
+- ✅ 免费创建多个工作区
+- ✅ 支持团队协作与分享
+- ✅ 在线使用，随时随地访问
+
+👉 [立即创建工作区](https://chat.i-lingro.com) | AI助手免费使用
