--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,3 +1,26 @@
+import { Helmet } from '@rspress/core/runtime';
+
+<Helmet>
+  <title>灵格若 - AI助手一站式解决方案 | 知识库管理 | AI工作流搭建平台</title>
+  <meta name="description" content="灵格若(Lingro)是专业的AI助手平台,提供知识库管理系统、AI工作流搭建、AI智能体开发、提示词管理、MCP工具集成等功能。支持通义千问、DeepSeek、ChatGPT、Claude等多模型切换,为企业和个人提供免费AI助手服务。" />
+  <meta name="keywords" content="AI助手,AI助手免费使用,AI助手在线使用,知识库,知识库管理系统,企业知识库,AI知识库搭建,AI工作流,AI工作流搭建,AI智能体,AI Agent,提示词管理,AI指令,MCP工具,多模型切换,AI大模型,通义千问,DeepSeek,ChatGPT,Claude,RAG,检索增强,灵格若,Lingro" />
+
+  {/* Open Graph */}
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="灵格若 - AI助手一站式解决方案 | 知识库管理 | AI工作流平台" />
+  <meta property="og:description" content="专业的AI助手平台,整合知识库管理、工作流搭建、智能体开发于一体。免费使用,支持多AI大模型切换,助力企业数字化转型。" />
+  <meta property="og:url" content="https://docs.i-lingro.com/lingro-doc/docs/start/introduction.html" />
+  <meta property="og:site_name" content="灵格若 Lingro" />
+
+  {/* Twitter Card */}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="灵格若 - AI助手一站式解决方案" />
+  <meta name="twitter:description" content="知识库管理、AI工作流搭建、智能体开发的专业平台。支持多AI大模型,免费使用。" />
+
+  {/* Canonical URL */}
+  <link rel="canonical" href="https://docs.i-lingro.com/lingro-doc/docs/start/introduction.html" />
+</Helmet>
+
 # 灵格若-产品介绍
 
 ## 产品概述
@@ -16,7 +39,7 @@
 - **[提示词(Prompt)管理](/lingro-doc/v1/docs/features/prompt)** - 创建、组织和优化提示词，让AI输出更精准
 - **[知识库管理](/lingro-doc/v1/docs/features/knwoledge-base)** - 导入专属资料，让AI基于您的知识回答问题
 - **[MCP工具集成](/lingro-doc/v1/docs/features/mcp)** - 连接各类专业工具，扩展AI能力边界
-- **[多模型智能切换](/lingro-doc/v1/docs/features/models)** - 自由选择合适的模型，满足不同场景需求
+- **[多模型对比与切换](/lingro-doc/v1/docs/features/models)** - 自由选择合适的模型，满足不同场景需求
 
 ## 为企业赋能
 
@@ -62,4 +85,3 @@
 👉 [立即使用AI助手](https://chat.i-lingro.com) | 完全免费 | 无需下载
 
 体验AI如何革新您的工作方式！🌟
-
