--- a/docs/v1/docs/features/knowledge-base.mdx
+++ b/docs/v1/docs/features/knowledge-base.mdx
@@ -14,7 +14,7 @@ import { Helmet } from '@rspress/core/runtime';
   <link rel="canonical" href="https://docs.i-lingro.com/lingro-doc/docs/features/knowledge-base.html" />
 </Helmet>
 
-# 知识库
+# 知识库系统
 
 知识库是提升AI应用效能的关键技术，它通过将用户问题与预先存储的专业知识相结合，使AI回答更加准确、专业、可靠。无论是企业内部文档、专业领域资料，还是业务规则，都可以通过RAG技术转化为AI可理解的知识，让AI回答言之有物，减少"幻觉"问题，提高回复质量。真正实现"用自己的数据，回答自己的问题"。
 
